# pixelcoat

./: CHANGELOG.md  README.md  VERSION  pyproject.toml
docs/: MATERIAL_COVERAGE.md  ROADMAP_generation_7.md  ROADMAP_v3.md  STOPLIGHT_HANDOFF.md  TDD_v0_1.md
integrations/: README.md
integrations/blender/: pixelcoat_import.py
pixelcoat/: __init__.py  recipe.py  version.py
pixelcoat/cli/: main.py
pixelcoat/core/: __init__.py  alpha.py  atlas.py  batch.py  color_space.py  decals.py  detail_texture.py  dithering.py  frequency.py  image_io.py  lighting_flatten.py  maps.py  material_grammar.py  material_response.py  pipeline.py  pipeline_generation_7.py  pipeline_pixel.py  preview.py  procedural_surface.py  quantization.py  signage.py  simplification.py  tiling.py  transforms.py  uv_dilation.py  weathering.py
profiles/: night_city_16.json
profiles/generation_7/: brick.json  concrete.json  painted_metal.json  wood.json
profiles/materials/: asphalt_street.json  brick_delco.json  brick_glazed_green.json  brick_painted_white.json  canvas_delco.json  carpet_delco.json  ceiling_tile_delco.json  cinderblock_delco.json  cobblestone.json  concrete_boardform_stadium.json  concrete_delco.json  concrete_interior_delco.json  concrete_polished_casino.json  concrete_sidewalk_street.json  corrugated_metal_delco.json  dirt_delco.json  drywall_delco.json  flagstone.json  (+33 more)
tests/: test_decals.py  test_material_grammar.py  test_pixelcoat.py  test_proc_cli.py  test_procedural_surface.py  test_signage.py  test_uv_dilation.py
tools/: gen_sign_sources.py  make_delco_signage.ps1
(+14 files in other folders)
